--- a/index.ipynb
+++ b/index.ipynb
@@ -26,12 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bayes(P_a, P_b, P_b_given_a):\n",
-    "    #Your code here\n",
+    "    '''\n",
+    "    Input: given probabilities\n",
+    "    Output: Bayes's probability\n",
+    "    '''\n",
+    "    P_a_given_b = (P_b_given_a * P_a) / P_b\n",
     "    return P_a_given_b"
    ]
   },
@@ -48,19 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.46875\n"
+      "The probability that patient has skin cancer is: 0.46875\n"
      ]
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "P_a= .15\n",
+    "P_b_given_a = 1 \n",
+    "P_b= (P_a*P_b_given_a) + (.2*(1-P_a))\n",
+    "print(f'The probability that patient has skin cancer is: {bayes(P_a, P_b, P_b_given_a)}')"
    ]
   },
   {
@@ -70,6 +78,26 @@
     "## Children 1 \n",
     "\n",
     "A couple has two children, the older of which is a boy. What is the probability that they have two boys?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_a= .25\n",
+    "P_b_given_a= 1\n",
+    "P_b= .5\n",
+    "print(f'{bayes(P_a, P_b, P_b_given_a)}')"
    ]
   },
   {
@@ -99,6 +127,26 @@
     "## Children  2\n",
     "\n",
     "A couple has two children, one of which is a boy. What is the probability that they have two boys?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_a= .25\n",
+    "P_b_given_a= 1\n",
+    "P_b= .75\n",
+    "print(f'{bayes(P_a, P_b, P_b_given_a)}')"
    ]
   },
   {
@@ -136,6 +184,26 @@
     "* 1% of all people have this disease \n",
     "\n",
     "If a patient tests positive, what is the probability that they actually have the disease?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_a= .01\n",
+    "P_b_given_a= .99\n",
+    "P_b= (.01*.99) + (.01*(1-P_a))\n",
+    "print(f'{bayes(P_a, P_b, P_b_given_a)}')"
    ]
   },
   {
@@ -184,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
